# TEST2023

./: CMakeLists.txt  README.md
acu/: pdps_channel1.txt  testbuf.txt
inc/: CFG_Init.h  device.h  file_port.h  modbus-private.h  particalDischarge_file.h
inc/modbus/: modbus.h
lib/: libmodbus.so.5.1.0
src/: CFG_Init.c  device.c  file_port.c  heeo.c  main.c  modbus-data.c  modbus.c  particalDischarge_file.c
